--- a/ansible/roles/logstash-server/files/conf.d/hp-telnet.conf
+++ b/ansible/roles/logstash-server/files/conf.d/hp-telnet.conf
@@ -4,12 +4,17 @@ filter {
 			match => {"message" => "(?<epoch>\d+),%{TIMESTAMP_ISO8601:text_timestamp},%{IP:src_ip},(?<username>.*?),(?<password>.*)"}
 		}
 	}
-}
-
-filter {
 	if "telnet" in [tags] and "csv" in [tags] {
 		date {
 			match => ["epoch", "UNIX"]
+		}
+
+		geoip {
+			source => "src_ip"
+			database => "/etc/logstash/GeoIPASNum.dat"
+		}
+		geoip {
+			source => "src_ip"
 		}
 	}
 }
@@ -17,7 +22,7 @@ filter {
 output {
 	if "telnet" in [tags] {
 		elasticsearch {
-			index => "telnet-%{+YYYY.MM.dd}"
+			index => "logstash-telnet-%{+YYYY.MM.dd}"
 		}
 	}
 }
