--- a/ansible/roles/filebeat/tasks/main.yml
+++ b/ansible/roles/filebeat/tasks/main.yml
@@ -18,6 +18,10 @@
   become: true
   when: filebeat_check_deb.rc == 1
 
+- name: Create SSL Directory
+  file: state=directory path=/etc/filebeat/ssl
+  become: true
+
 - name: Copy over CA Cert
   copy: src="{{ role_path }}/files/ssl/ca.crt" dest="/etc/filebeat/ssl/ca.crt"
   become: true
