Updated logstash iptables grok

--- a/ansible/roles/logstash-server/files/conf.d/iptables.conf
+++ b/ansible/roles/logstash-server/files/conf.d/iptables.conf
@@ -5,7 +5,7 @@ filter {
 		}
 
 		grok {
-			match => {"syslog_message" => ".*? IPTables-(?<iptables_action>.*?): (?<iptables_message>.*)"}
+			match => {"message" => ".*? IPTables-(?<iptables_action>.*?): (?<iptables_message>.*)"}
 		}
 		
 		kv {
