--- a/ansible/roles/logstash-server/tasks/main.yml
+++ b/ansible/roles/logstash-server/tasks/main.yml
@@ -37,15 +37,15 @@
   service: enabled=yes state=started name=logstash
   become: true
 
-- name: Download GeoIP ASNUm database
-  get_url: url=http://download.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz dest=/tmp/GeoIPASNum.dat.gz 
+#- name: Download GeoIP ASNUm database
+#  get_url: url=http://download.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz dest=/tmp/GeoIPASNum.dat.gz 
 
-- name: Unzip Geoip
-  shell: gunzip -f /tmp/GeoIPASNum.dat.gz
+#- name: Unzip Geoip
+#  shell: gunzip -f /tmp/GeoIPASNum.dat.gz
 
-- name: Move GeoIP DB
-  shell: mv /tmp/GeoIPASNum.dat /etc/logstash/.
-  become: true
+#- name: Move GeoIP DB
+#  shell: mv /tmp/GeoIPASNum.dat /etc/logstash/.
+#  become: true
 
 - include: "{{ role_path }}/../common/iptables/iptables-disable-apt.yml"
 
