Added geoip lookup on Iptable logs

--- a/ansible/roles/logstash-server/files/conf.d/iptables.conf
+++ b/ansible/roles/logstash-server/files/conf.d/iptables.conf
@@ -11,13 +11,17 @@ filter {
 		kv {
 			source => "iptables_message"
 		}
+
+		geoip {
+			source => "SRC"
+		}
 	}
 }
 
 output {
 	if "IPTables" in [tags] {
 		elasticsearch {
-			index => "iptables-%{+YYYY.MM.dd}"
+			index => "logstash-iptables-%{+YYYY.MM.dd}"
 		}
 	}
 }
