Added Iptables service lookups

--- a/ansible/roles/logstash-server/files/conf.d/iptables.conf
+++ b/ansible/roles/logstash-server/files/conf.d/iptables.conf
@@ -15,6 +15,20 @@ filter {
 		geoip {
 			source => "SRC"
 		}
+		
+		translate {
+			dictionary_path => "/etc/logstash/lookups/protocol-lookup.yml"
+			destination => "PROTOCOL"
+			exact => true
+			field => "PROTO"
+		}
+
+		translate {
+			dictionary_path => "/etc/logstash/lookups/port-service.yml"
+			destination => "SERVICE"
+			exact => true
+			field => "DPT"
+		}
 	}
 }
 
