Updated IPtables to use ansible_port in iptables

--- a/ansible/roles/cowrie/files/cowrie.cfg
+++ b/ansible/roles/cowrie/files/cowrie.cfg
@@ -141,7 +141,7 @@ txtcmds_path = txtcmds
 #  and cache 10 combinations.
 #
 auth_class = AuthRandom
-auth_class_parameters = 2, 10, 15
+auth_class_parameters = 2, 6, 10
 
 
 # No authentication checking at all
@@ -201,7 +201,7 @@ ssh_version_string = SSH-2.0-OpenSSH_6.0p1 Debian-4+deb7u2
 
 
 # Source Port to report in logs (useful if you use iptables to forward ports to Cowrie)
-#reported_ssh_port = 22
+reported_ssh_port = 22
 
 
 # Public and private SSH key files. If these don't exist, they are created
