--- a/ansible/roles/logstash-server/files/conf.d/iptables.conf
+++ b/ansible/roles/logstash-server/files/conf.d/iptables.conf
@@ -1,5 +1,5 @@
 filter {
-	if [type] == "syslog" and [message] =~ "IPTables" {
+	if "syslog" in [tags] and [message] =~ "IPTables" {
 		mutate {
 			add_tag => ["IPTables"]
 		}
