Added cowrie telnet support and cowrie geoip

--- a/ansible/honeypot.yml
+++ b/ansible/honeypot.yml
@@ -1,8 +1,9 @@
 ---	
 - hosts: honeypot
+  vars:
+    - cowrie_telnet: true
   roles:
     - hardening
     - filebeat
-    - hp-telnet
     - metricbeat
     - cowrie
