--- a/ansible/roles/cowrie/files/cowrie.cfg
+++ b/ansible/roles/cowrie/files/cowrie.cfg
@@ -20,7 +20,7 @@
 # environment
 #
 # (default: svr04)
-hostname = svr04
+hostname = adsl1
 
 
 # Directory where to save log files in.
@@ -197,8 +197,8 @@ listen_port = 2222
 # SSH-2.0-OpenSSH_5.9
 #
 # (default: "SSH-2.0-SSH-2.0-OpenSSH_6.0p1 Debian-4+deb7u2")
-ssh_version_string = SSH-2.0-OpenSSH_6.0p1 Debian-4+deb7u2
-
+#ssh_version_string = SSH-2.0-OpenSSH_6.0p1 Debian-4+deb7u2
+ssh_version_String = SSH-2.0-OpenSSH_5.5p1 Debian-6+squeeze2
 
 # Source Port to report in logs (useful if you use iptables to forward ports to Cowrie)
 reported_ssh_port = 22
@@ -247,7 +247,7 @@ forwarding = true
 [telnet]
 
 # Enable Telnet support, disabled by default
-enabled = false
+enabled = {{ cowrie_telnet }}
 
 # IP addresses to listen for incoming Telnet connections.
 #
@@ -260,10 +260,10 @@ enabled = false
 # Port to listen for incoming Telnet connections.
 #
 # (default: 2223)
-#listen_port = 2223
+listen_port = 2223
 
 # Source Port to report in logs (useful if you use iptables to forward ports to Cowrie)
-#reported_port = 23
+reported_port = 23
 
 
 # ============================================================================
