--- a/ansible/roles/logstash-server/files/conf.d/iptables.conf
+++ b/ansible/roles/logstash-server/files/conf.d/iptables.conf
@@ -29,6 +29,10 @@ filter {
 			exact => true
 			field => "DPT"
 		}
+
+		mutate {
+			convert => { "DPT" => "integer" "SPT" => "integer" "TTL" => "integer" "WINDOW" => "integer" "OFFSET" => "integer" "LEN" => "integer" "ID" => "integer" }
+		}
 	}
 }
 
