--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -57,4 +57,6 @@
 #- name: Add Metricbeat Dashboards
 #  shell: /tmp/./import_dashboards_metricbeat
 
+- include: tools.yml
+
 - include: "{{ role_path }}/../common/iptables/iptables-disable-apt.yml"
